<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tetris</string>
    <string name="action_settings">Settings</string>

    <string name="splash_title"></string>
    <string name="splash_button_start_game">Start Game</string>
    <string name="splash_button_view_contacts">View Contacts...</string>
    <string name="splash_button_view_map">View Map</string>

    <string name="game_activity_name">Game Activity</string>
    <string name="game_title">Game Title</string>
    <string name="game_over">Game Over!</string>
    <string name="game_quit">Quit</string>

    <string name="settings_title">Settings</string>
    <string name="settings_drag_sensitivity">Drag Sensitivity</string>
    <string name="settings_drag_lock">Lock Dragging to Single Direction</string>
    <string name="settings_defaults">Restore Defaults</string>
    <string name="settings_back">Back To Game</string>
    <string name="settings_music">Music/Sound </string>
    <string name="settings_track">Track </string>
    <string name="settings_a">A</string>
    <string name="settings_b">B</string>
    <string name="settings_c">C</string>
    <string name="settings_d">D</string>
    <string name="settings_play_music">Play Music</string>
    <string name="settings_play_sounds">Play Sounds</string>
    <string name="settings_volume">Volume</string>

</resources>
